--- a/week01/01_finite state machine/01_find 'a' in a string without FSM.html
+++ b/week01/01_finite state machine/01_find 'a' in a string without FSM.html
@@ -12,10 +12,16 @@
 </head>
 
 <body>
-    <div>
-        1223
-    </div>
     <script>
+        let strTest = "qasdfgghj"
+
+        function find_a_inStr(str) {
+
+            // console.log(str.indexOf("a"))
+            return str.indexOf("a")
+        }
+
+        find_a_inStr(strTest)
     </script>
 </body>
 
