--- a/week01/01_finite state machine/03_find 'abcdef' in a string without FSM.html
+++ b/week01/01_finite state machine/03_find 'abcdef' in a string without FSM.html
@@ -28,7 +28,7 @@
 
         // findStrAinStrB(strA, strB)
 
-        var str = 'qweasdabcdefwett'
+        var str = 'qweasdabcdefwett';
 
         function find_abcdef_inStr(string) {
             var arr = [...string]
@@ -39,7 +39,8 @@
                     arr[i + 3] == "d" &&
                     arr[i + 4] == "e" &&
                     arr[i + 5] == "f") {
-                    console.log(i);
+                    console.log(i)
+
                     return i
                 }
             }
